force-app/main/default/objects/Ordre_de_Mission__c/fields/NTelEmetteur__c.field-meta.xml
<CustomField>
    <fullName>NTelEmetteur__c</fullName>
    <description>[NTEMET]</description>
    <label>N° tel émetteur</label>
    <type>Phone</type>
</CustomField>