force-app/main/default/objects/Ordre_de_Mission__c/fields/NumeroMissionBCA__c.field-meta.xml
<CustomField>
    <fullName>NumeroMissionBCA__c</fullName>
    <description>[NUMIS] Numéro de mission BCA communiqué par le client</description>
    <inlineHelpText>[NUMIS] Numéro de mission BCA communiqué par le client</inlineHelpText>
    <label>Numéro de mission BCA</label>
    <length>12</length>
    <type>Text</type>
</CustomField>