force-app/main/default/objects/Ordre_de_Mission__c/fields/NumeroSerieVehiculeAssure__c.field-meta.xml
<CustomField>
    <fullName>NumeroSerieVehiculeAssure__c</fullName>
    <description>[NOSIE]</description>
    <label>Numéro de série du véhicule assuré</label>
    <length>17</length>
    <type>Text</type>
</CustomField>