force-app/main/default/objects/Ordre_de_Mission__c/fields/NumeroSinistre__c.field-meta.xml
<CustomField>
    <fullName>NumeroSinistre__c</fullName>
    <description>[NUSIN] Numéro de sinistre communiqué par le client (assureur)</description>
    <externalId>true</externalId>
    <inlineHelpText>[NUSIN] Numéro de sinistre communiqué par le client (assureur)</inlineHelpText>
    <label>Numéro de sinistre</label>
    <length>17</length>
    <type>Text</type>
</CustomField>