force-app/main/default/objects/Ordre_de_Mission__c/fields/NumeroTelephoneGestionnaire__c.field-meta.xml
<CustomField>
    <fullName>NumeroTelephoneGestionnaire__c</fullName>
    <description>NTEMET2</description>
    <label>Numéro de téléphone du gestionnaire</label>
    <type>Phone</type>
</CustomField>