force-app/main/default/objects/Ordre_de_Mission__c/fields/ObservationsConstatLese__c.field-meta.xml
<CustomField>
    <fullName>ObservationsConstatLese__c</fullName>
    <description>[OBCON]</description>
    <label>Observations constat lésé</label>
    <length>60</length>
    <type>Text</type>
</CustomField>