force-app/main/default/objects/Ordre_de_Mission__c/fields/ObservationsConstatTiers__c.field-meta.xml
<CustomField>
    <fullName>ObservationsConstatTiers__c</fullName>
    <description>[OBCONT]</description>
    <label>Observations constat tiers</label>
    <length>60</length>
    <type>Text</type>
</CustomField>