force-app/main/default/objects/Ordre_de_Mission__c/fields/PaysEmetteur__c.field-meta.xml
<CustomField>
    <fullName>PaysEmetteur__c</fullName>
    <description>PAYAM</description>
    <label>Pays de l&#39;émetteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pays</valueSetName>
    </valueSet>
</CustomField>