force-app/main/default/objects/Ordre_de_Mission__c/fields/PaysLese__c.field-meta.xml
<CustomField>
    <fullName>PaysLese__c</fullName>
    <description>PAYLE</description>
    <label>Pays du lésé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pays</valueSetName>
    </valueSet>
</CustomField>