force-app/main/default/objects/Ordre_de_Mission__c/fields/PaysTiers__c.field-meta.xml
<CustomField>
    <fullName>PaysTiers__c</fullName>
    <description>[PAYTI]</description>
    <label>Pays du tiers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pays</valueSetName>
    </valueSet>
</CustomField>