force-app/main/default/objects/Ordre_de_Mission__c/fields/PrenomGestionnaire__c.field-meta.xml
<CustomField>
    <fullName>PrenomGestionnaire__c</fullName>
    <description>[PREEMET2]</description>
    <label>Prénom du gestionnaire</label>
    <length>10</length>
    <type>Text</type>
</CustomField>