force-app/main/default/objects/Ordre_de_Mission__c/fields/PriseEnChargeAccessoires__c.field-meta.xml
<CustomField>
    <fullName>PriseEnChargeAccessoires__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[TPCAC]</description>
    <label>Prise en charge des accessoires</label>
    <type>Checkbox</type>
</CustomField>