force-app/main/default/objects/Ordre_de_Mission__c/fields/PuissanceReelle__c.field-meta.xml
<CustomField>
    <fullName>PuissanceReelle__c</fullName>
    <description>[PUISR]</description>
    <inlineHelpText>(CV DIN)</inlineHelpText>
    <label>Puissance réelle</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>