force-app/main/default/objects/Ordre_de_Mission__c/fields/RapportPapierNecessaire__c.field-meta.xml
<CustomField>
    <fullName>RapportPapierNecessaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[PAPNEC]</description>
    <label>Rapport papier nécessaire</label>
    <type>Checkbox</type>
</CustomField>