force-app/main/default/objects/Ordre_de_Mission__c/fields/SituationMaterielExpertiser__c.field-meta.xml
<CustomField>
    <fullName>SituationMaterielExpertiser__c</fullName>
    <description>[TETVH]</description>
    <label>Situation du matériel à expertiser</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Un ou les deux matériels sont immobilisés</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Les deux circulent et ne sont pas réparés</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Un ou les deux sont volés et non retrouvés</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>