force-app/main/default/objects/Ordre_de_Mission__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Réception</fullName>
                <default>true</default>
                <label>Réception</label>
            </value>
            <value>
                <fullName>Planification</fullName>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Pré-rapport</fullName>
            </value>
            <value>
                <fullName>Suivi Réparation</fullName>
            </value>
            <value>
                <fullName>Traitement</fullName>
            </value>
            <value>
                <fullName>Rapport Final</fullName>
            </value>
            <value>
                <fullName>Gestion Honoraires</fullName>
            </value>
            <value>
                <fullName>Archivage</fullName>
            </value>
            <value>
                <fullName>Après-Vente</fullName>
            </value>
            <value>
                <fullName>Attente prestation</fullName>
                <isActive>false</isActive>
                <label>Attente prestation</label>
            </value>
            <value>
                <fullName>Brouillon</fullName>
                <isActive>false</isActive>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Envoyé au client</fullName>
                <isActive>false</isActive>
                <label>Envoyé au client</label>
            </value>
            <value>
                <fullName>Terminé</fullName>
                <isActive>false</isActive>
                <label>Terminé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>