force-app/main/default/objects/Ordre_de_Mission__c/fields/TarifI1__c.field-meta.xml
<CustomField>
    <fullName>TarifI1__c</fullName>
    <description>[TARI1]</description>
    <label>Tarif I1</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>