force-app/main/default/objects/Ordre_de_Mission__c/fields/TarifI2__c.field-meta.xml
<CustomField>
    <fullName>TarifI2__c</fullName>
    <description>[TARI2]</description>
    <label>Tarif I2</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>