force-app/main/default/objects/Ordre_de_Mission__c/fields/TarifT3__c.field-meta.xml
<CustomField>
    <fullName>TarifT3__c</fullName>
    <description>[TART3]</description>
    <label>Tarif T3</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>