force-app/main/default/objects/Ordre_de_Mission__c/fields/TauxFranchise__c.field-meta.xml
<CustomField>
    <fullName>TauxFranchise__c</fullName>
    <description>TXFRA</description>
    <label>Taux de franchise</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>