force-app/main/default/objects/Ordre_de_Mission__c/fields/TauxPriseEnCharge__c.field-meta.xml
<CustomField>
    <fullName>TauxPriseEnCharge__c</fullName>
    <description>TXPEC</description>
    <label>Taux de prise en charge</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>