force-app/main/default/objects/Ordre_de_Mission__c/fields/TauxResponsabiliteAssure__c.field-meta.xml
<CustomField>
    <fullName>TauxResponsabiliteAssure__c</fullName>
    <description>[TXREAS]</description>
    <label>Taux de responsabilité de l&#39;assuré</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>