force-app/main/default/objects/Ordre_de_Mission__c/fields/TelephoneEmetteur__c.field-meta.xml
<CustomField>
    <fullName>TelephoneEmetteur__c</fullName>
    <description>[NTEMET]</description>
    <label>Téléphone de l&#39;émetteur</label>
    <type>Phone</type>
</CustomField>