force-app/main/default/objects/Ordre_de_Mission__c/fields/TelephoneLese__c.field-meta.xml
<CustomField>
    <fullName>TelephoneLese__c</fullName>
    <description>[NTLESE] N° de téléphone du lésé (personne concernée par le sinistre)</description>
    <inlineHelpText>[NTLESE] N° de téléphone du lésé (personne concernée par le sinistre)</inlineHelpText>
    <label>Téléphone lésé</label>
    <type>Phone</type>
</CustomField>