force-app/main/default/objects/Ordre_de_Mission__c/fields/TelephoneLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>TelephoneLieuExamen__c</fullName>
    <description>[NTEX] N° de téléphone du lieu d&#39;examen</description>
    <inlineHelpText>[NTEX] N° de téléphone du lieu d&#39;examen</inlineHelpText>
    <label>Téléphone du lieu d&#39;examen</label>
    <type>Phone</type>
</CustomField>