force-app/main/default/objects/Ordre_de_Mission__c/fields/TextePrecisantTypeFranchiseD__c.field-meta.xml
<CustomField>
    <fullName>TextePrecisantTypeFranchiseD__c</fullName>
    <description>TXT6</description>
    <label>Texte précisant le type de franchise &#39;D&#39;</label>
    <length>6</length>
    <type>Text</type>
</CustomField>