force-app/main/default/objects/Ordre_de_Mission__c/fields/TitreEmetteur__c.field-meta.xml
<CustomField>
    <fullName>TitreEmetteur__c</fullName>
    <description>TITRM</description>
    <label>Titre emetteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LibelleTitre</valueSetName>
    </valueSet>
</CustomField>