force-app/main/default/objects/Ordre_de_Mission__c/fields/TitreLese__c.field-meta.xml
<CustomField>
    <fullName>TitreLese__c</fullName>
    <description>TITRL</description>
    <label>Titre lésé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LibelleTitre</valueSetName>
    </valueSet>
</CustomField>