force-app/main/default/objects/Ordre_de_Mission__c/fields/TitreTiers__c.field-meta.xml
<CustomField>
    <fullName>TitreTiers__c</fullName>
    <description>[TITRT]</description>
    <label>Titre tiers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LibelleTitre</valueSetName>
    </valueSet>
</CustomField>