force-app/main/default/objects/Ordre_de_Mission__c/fields/TVAPriseEnChargeParAssureur__c.field-meta.xml
<CustomField>
    <fullName>TVAPriseEnChargeParAssureur__c</fullName>
    <description>[ITVAPA] Détermine si la TVA est prise en charge par l&#39;assureur ou pas.</description>
    <inlineHelpText>[ITVAPA] Détermine si la TVA est prise en charge par l&#39;assureur ou pas.</inlineHelpText>
    <label>TVA prise en charge par l&#39;assureur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Ne sait pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>