force-app/main/default/objects/Ordre_de_Mission__c/fields/TypeEmetteur__c.field-meta.xml
<CustomField>
    <fullName>TypeEmetteur__c</fullName>
    <description>[TYEMT]</description>
    <label>Type d&#39;émetteur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>C : Compagnie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>