force-app/main/default/objects/Ordre_de_Mission__c/fields/TypeFranchise__c.field-meta.xml
<CustomField>
    <fullName>TypeFranchise__c</fullName>
    <description>[TYFRA] Type de franchise dont bénéficie l&#39;assuré concerné par le sinistre.</description>
    <inlineHelpText>[TYFRA] Type de franchise dont bénéficie l&#39;assuré concerné par le sinistre.</inlineHelpText>
    <label>Type de franchise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>N : Franchise nulle</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>A : Montant fixe</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B : Forfait et complément proportionnel</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C : Proportionnelle avec limite</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D : Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>