force-app/main/default/objects/Ordre_de_Mission__c/fields/VehiculeAExpertiser__c.field-meta.xml
<CustomField>
    <fullName>VehiculeAExpertiser__c</fullName>
    <description>[PROVE] Véhicule(s) faisant l&#39;objet du sinistre.</description>
    <inlineHelpText>[PROVE]</inlineHelpText>
    <label>Véhicule à expertiser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A : véhicule assuré et autre véhicule sinistré si ce dernier est renseigné.</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>S : autre véhicule sinistré seul</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>T : tiers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>