force-app/main/default/objects/Ordre_de_Mission__c/fields/ZonesChoc__c.field-meta.xml
<CustomField>
    <fullName>ZonesChoc__c</fullName>
    <description>[NCHOC9] La ou les zone(s) de choc touché(s) sur le véhicule de l&#39;assuré dû au sinistre.</description>
    <label>Zone(s) de choc</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 : avant gauche</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 : avant droite</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 : côté gauche</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 : côté droit</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 : arrière gauche</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 : arrière droit</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 : arrière</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 : avant</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 : toit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>