force-app/main/default/objects/Ordre_de_Mission__c/validationRules/OM_VR001_Montant_Franchise_Requis.validationRule-meta.xml
<ValidationRule>
    <fullName>OM_VR001_Montant_Franchise_Requis</fullName>
    <active>true</active>
    <description>Montant franchise doit être renseigné si type de franchise égal à &quot;Montant fixe&quot;, &quot;Forfait et complément proportionnel&quot;, ou &quot;Proportionnelle avec limite&quot;.</description>
    <errorConditionFormula>AND
   (ISNULL( MontantPlancheOuFixeFranchise__c ),
     OR
       ( ISPICKVAL(TypeFranchise__c ,&#39;A&#39;),
         ISPICKVAL(TypeFranchise__c ,&#39;B&#39;),
         ISPICKVAL(TypeFranchise__c ,&#39;C&#39;)
       ),
       $User.ByPassValidationRules__c = false
)</errorConditionFormula>
    <errorDisplayField>MontantPlancheOuFixeFranchise__c</errorDisplayField>
    <errorMessage>Merci de renseigner le montant planché ou fixe de franchise.</errorMessage>
</ValidationRule>