force-app/main/default/objects/Ordre_de_Mission__c/validationRules/OM_VR002_Nom_Examen_Requis.validationRule-meta.xml
<ValidationRule>
    <fullName>OM_VR002_Nom_Examen_Requis</fullName>
    <active>true</active>
    <description>Nom examen doit être renseigné si code lieu examen égal à &quot;Réparateur&quot;.</description>
    <errorConditionFormula>AND
   (ISBLANK ( NomExamen__c  ),

ISPICKVAL
( CodeLieuExamen__c  , &#39;R&#39;), 

$User.ByPassValidationRules__c = false
)</errorConditionFormula>
    <errorDisplayField>NomExamen__c</errorDisplayField>
    <errorMessage>Merci de renseigner le nom du lieu d&#39;examen.</errorMessage>
</ValidationRule>