force-app/main/default/objects/Ordre_de_Mission__c/validationRules/OM_VR003_Code_Postal_Lieu_Examen_Requis.validationRule-meta.xml
<ValidationRule>
    <fullName>OM_VR003_Code_Postal_Lieu_Examen_Requis</fullName>
    <active>true</active>
    <description>Code postal lieu examen doit être renseigné si code lieu examen égal à &quot;Réparateur&quot;.</description>
    <errorConditionFormula>AND 
(ISBLANK (  CodePostalLieuExamen__c ), 

ISPICKVAL 
( CodeLieuExamen__c , &#39;R&#39;), 

$User.ByPassValidationRules__c = false 
)</errorConditionFormula>
    <errorDisplayField>CodePostalLieuExamen__c</errorDisplayField>
    <errorMessage>Merci de renseigner le code postal du lieu d&#39;examen.</errorMessage>
</ValidationRule>