force-app/main/default/objects/Ordre_de_Mission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NumeroMissionBCA__c</columns>
    <columns>NumeroSinistre__c</columns>
    <columns>Statut__c</columns>
    <columns>DateDepotVehiculeExamen__c</columns>
    <columns>CodePostalLieuExamen__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les O.M</label>
</ListView>