force-app/main/default/objects/Ordre_de_Mission__c/listViews/ExpertiseDistance.listView-meta.xml
<ListView>
    <fullName>ExpertiseDistance</fullName>
    <columns>NAME</columns>
    <columns>NumeroMissionBCA__c</columns>
    <columns>NatureMission__c</columns>
    <columns>Statut__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NatureMission__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>EAD</label>
</ListView>