force-app/main/default/objects/Ordre_de_Mission__c/listViews/Reception.listView-meta.xml
<ListView>
    <fullName>Reception</fullName>
    <columns>NAME</columns>
    <columns>NumeroMissionBCA__c</columns>
    <columns>NumeroSinistre__c</columns>
    <columns>NatureMission__c</columns>
    <columns>Statut__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Réception</value>
    </filters>
    <label>Réception</label>
</ListView>